# newsletter_rs

./: Cargo.toml  README.md  compose.yml
migrations/: 20241207171327_add_subscriptions_table.sql
scripts/: db-migrate.sh  dev-watch.sh
src/: lib.rs  main.rs  startup.rs  utils.rs
src/routes/: health_check.rs  subscription.rs
tests/: health_check.rs
