[package]
name = "newsletter_rs"
version = "0.1.0"
edition = "2021"
authors = ["Irabeny <irabeny89@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_rs"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
