[package]
name = "newsletter_rs"
version = "0.1.0"
edition = "2021"
authors = ["Irabeny <irabeny89@gmail.com>"]

# you can only have one binary, except in workspace
[lib]
path = "src/lib.rs"

# you can have more than one binary
[[bin]]
path = "src/main.rs"
name = "newsletter_rs"

[dev-dependencies]
reqwest = "0.12.9"

[dependencies]
dotenvy = "0.15.7"
config = "0.14.1"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }

# using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
